--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,9 +16,8 @@
     - vsftpd
     - configuration
 
-- name: ensure vsftp service is enabled
-  service: name=vsftpd enabled=yes
-  notify: restart vsftpd
+- name: ensure vsftp service is enabled and running
+  service: name=vsftpd enabled=yes state=started
   tags:
     - vsftpd
     - configuration
