--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,8 +3,8 @@ vsftpd_anonymous_enable: false
 vsftpd_local_enable: true
 vsftpd_virtual_users: true
 vsftpd_virtual_user_db: /etc/vsftpd/vsftpd_login
-vsftpd_virtual_root: ''
-vsftpd_local_root: "{{ vsftpd_virtual_root }}/$USER"
+vsftpd_virtual_root: /var/ftp
+vsftpd_user_sub_token: $USER
 
 # vsftpd can only listen on ipv4 or ipv6
 # true for ipv6 and false for ipv4
