--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ vsftpd_virtual_users: true
 vsftpd_virtual_user_db: /etc/vsftpd/vsftpd_login
 vsftpd_virtual_root: /var/ftp
 vsftpd_user_sub_token: $USER
+vsftpd_chroot_local_user: true
 
 # vsftpd can only listen on ipv4 or ipv6
 # true for ipv6 and false for ipv4
