--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,8 @@ vsftpd_local_enable: true
 vsftpd_virtual_users: true
 vsftpd_virtual_user_db: /etc/vsftpd/vsftpd_login
 vsftpd_virtual_root: /var/ftp
+vsftpd_virtual_root_owner: ftp
+vsftpd_virtual_root_group: ftp
 vsftpd_user_sub_token: $USER
 vsftpd_chroot_local_user: true
 
