--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description:
   company:
   license: MIT
-  min_ansible_version: 1.9.1
+  min_ansible_version: 2.2.1
   platforms:
   - name: EL
     versions:
@@ -13,4 +13,4 @@ galaxy_info:
   - networking
   - system
 dependencies:
-  - { role: correcthorse.common }
+  - correcthorse.common
