--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,14 +18,14 @@
 
 - name: configure pam for virtual users
   template: src=vsftpd.virtual.j2 dest=/etc/pam.d/vsftpd.virtual
-  when: vsftpd_virtual_users
+  when: vsftpd_virtual_users|bool
   tags:
     - vsftpd
     - configuration
 
 - name: make sure virtual root exists
   file: path={{ vsftpd_virtual_root }} state=directory owner="{{ vsftpd_virtual_root_owner }}" group="{{ vsftpd_virtual_root_group }}"
-  when: vsftpd_virtual_users and vsftpd_virtual_root
+  when: vsftpd_virtual_users|bool and vsftpd_virtual_root is defined
   tags:
     - vsftpd
     - configuration
@@ -34,14 +34,14 @@
   template: src=virtual_logins.j2 dest="{{ vsftpd_virtual_user_db }}" owner=root group=root mode=0600
   when: vsftpd_virtual_users and vsftpd_virtual_logins is defined and vsftpd_virtual_logins
   no_log: true
-  register: vsftpd_new_logins
+  register: vsftpd_new_logins|bool
   tags:
     - vsftpd
     - configuration
 
 - name: create virtual login db
   command: db_load -T -t hash -f {{ vsftpd_virtual_user_db }} {{ vsftpd_virtual_user_db }}.db
-  when: vsftpd_new_logins|changed
+  when: vsftpd_new_logins is changed
   tags:
     - vsftpd
     - configuration
